--- a/gms.web/Views/Membership/_EditMemberMembership.cshtml
+++ b/gms.web/Views/Membership/_EditMemberMembership.cshtml
@@ -32,7 +32,7 @@
             <!--begin::Input group-->
             <div class="col mb-5 fv-row">
                 <label class="required form-label ms-2">@localizer["valid_from"]</label>
-                <input class="form-control" asp-for="@Model.MemberMembershipDTO.JoiningDate" placeholder="@localizer["enter"] @localizer["joining_date"] @localizer["here"]" disabled />
+                <input class="form-control" asp-for="@Model.MemberMembershipDTO.JoiningDate" placeholder="@localizer["enter"] @localizer["joining_date"] @localizer["here"]" />
             </div>
             <!--end::Input group-->
             <!--begin::Input group-->
