--- a/gms.web/Views/Roles/Roles.cshtml
+++ b/gms.web/Views/Roles/Roles.cshtml
@@ -1133,4 +1133,6 @@
 </div>
 <!--end::Content wrapper-->
 
-<script type="module" src="~/assets/js/customJs/Roles.js"></script>
+@section Scripts {
+	<script type="module" src="~/assets/js/customJs/User/Roles.js" asp-append-version="true"></script>
+}
