--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -179,7 +179,7 @@
 								<!--begin:Menu item-->
 								<div class="menu-item" side-menu-item="true">
 									<!--begin:Menu link-->
-									<a class="menu-link" href="@Url.Action("Roles", "Roles")">
+									<a class="menu-link" asp-controller="Roles" asp-action="Index">
 										<span class="menu-bullet">
 											<span class="bullet bullet-dot"></span>
 										</span>
