--- a/gms.web/Views/GymUser/CreateNewStaff.cshtml
+++ b/gms.web/Views/GymUser/CreateNewStaff.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using gms.common.ViewModels.GymUser
+@model AddNewStaffVM
+@{
 	ViewData["Title"] = localizer["add_new_staff"];
 	bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
 }
@@ -39,7 +41,7 @@
 		<!--begin::Content container-->
 		<div id="kt_app_content_container" class="app-container container-fluid">
 			<!--begin::Form-->
-			<form id="add_new_staff_form" class="form d-flex flex-column flex-lg-row gap-7 gap-lg-10">
+			<form id="add_new_staff_form" autocomplete="off" class="form d-flex flex-column flex-lg-row gap-7 gap-lg-10">
 				<!--begin::Aside column-->
 				<div class="d-flex flex-column gap-7 gap-lg-10 w-100 min-w-300px w-lg-300px">
 					<!--begin::Image-->
@@ -58,7 +60,7 @@
 							<!--begin::Image input-->
 							<div class="image-input image-input-empty image-input-outline symbol-label-blank mb-3" data-kt-image-input="true">
 								<!--begin::Preview existing avatar-->
-								<div class="image-input-wrapper w-150px h-150px"></div>
+								<div class="image-input-wrapper w-150px h-150px" style="background-position: center;"></div>
 								<!--end::Preview existing avatar-->
 								<!--begin::Label-->
 								<label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="Change avatar">
@@ -66,7 +68,7 @@
 									<i class="ki-outline ki-pencil fs-7"></i>
 									<!--end::Icon-->
 									<!--begin::Inputs-->
-									<input type="file" name="avatar" accept=".png, .jpg, .jpeg" />
+									<input type="file" asp-for="@Model.CreateStaffDTO.Image" accept=".png, .jpg, .jpeg" />
 									<input type="hidden" name="avatar_remove" />
 									<!--end::Inputs-->
 								</label>
@@ -84,7 +86,7 @@
 							</div>
 							<!--end::Image input-->
 							<!--begin::Description-->
-							<div class="text-muted fs-7">Set the member image. Only *.png, *.jpg and *.jpeg image files are accepted</div>
+							<div class="text-muted fs-7">@localizer["allowed_file_types"]</div>
 							<!--end::Description-->
 						</div>
 						<!--end::Card body-->
@@ -101,7 +103,7 @@
 							<!--end::Card title-->
 							<!--begin::Card toolbar-->
 							<div class="card-toolbar">
-								<div class="rounded-circle bg-success w-15px h-15px" id="staff_tatus"></div>
+								<div class="rounded-circle bg-success w-15px h-15px" id="staff_status"></div>
 							</div>
 							<!--begin::Card toolbar-->
 						</div>
@@ -109,10 +111,10 @@
 						<!--begin::Card body-->
 						<div class="card-body pt-0">
 							<!--begin::Select2-->
-							<select class="form-select mb-2" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]" id="staff_status_select">
+							<select class="form-select mb-2" asp-for="@Model.CreateStaffDTO.StatusId" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]">
 								<option></option>
-								<option value="@localizer["active"].Value" selected="selected">@localizer["active"]</option>
-								<option value="@localizer["inactive"].Value">@localizer["inactive"]</option>
+								<option value="1" selected="selected">@localizer["active"]</option>
+								<option value="2">@localizer["inactive"]</option>
 							</select>
 							<!--end::Select2-->
 						</div>
@@ -138,31 +140,31 @@
 								<!--begin::Input group-->
 								<div class="col mb-5 fv-row">
 									<label class="required form-label ms-2">@localizer["first_name"]</label>
-									<input type="text" name="FirstName" class="form-control" placeholder="@localizer["enter"] @localizer["first_name"] @localizer["here"]" />
+									<input type="text" asp-for="@Model.CreateStaffDTO.FirstName" class="form-control" placeholder="@localizer["enter"] @localizer["first_name"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 								<!--begin::Input group-->
 								<div class="col mb-5 fv-row">
 									<label class="required form-label ms-2">@localizer["last_name"]</label>
-									<input type="text" name="LastName" class="form-control" placeholder="@localizer["enter"] @localizer["last_name"] @localizer["here"]" />
+									<input type="text" asp-for="@Model.CreateStaffDTO.LastName" class="form-control" placeholder="@localizer["enter"] @localizer["last_name"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 							</div>
 							<div class="row row-cols-1 row-cols-sm-2 rol-cols-md-1 row-cols-lg-2">
 								<!--begin::Input group-->
-								<div class="col mb-5 mb-sm-0 mb-md-0 mb-lg-0 fv-row">
+								<div class="col mb-5 fv-row">
 									<label class="required form-label ms-2">@localizer["birthdate"]</label>
-									<input class="form-control" name="Birthdate" id="birthdate_date_picker" placeholder="@localizer["enter"] @localizer["birthdate"] @localizer["here"]" />
+									<input class="form-control" asp-for="@Model.CreateStaffDTO.BirthDate" placeholder="@localizer["enter"] @localizer["birthdate"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 								<!--begin::Input group-->
-								<div class="col fv-row">
+								<div class="col mb-5 fv-row">
 									<label class="required form-label ms-2">@localizer["gender"]</label>
 									<!--begin::Select Status-->
-									<select class="form-select" name="Gender" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]">
+									<select class="form-select" asp-for="@Model.CreateStaffDTO.GenderId" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]">
 										<option></option>
-										<option value="@localizer["male"]">@localizer["male"]</option>
-										<option value="@localizer["female"]">@localizer["female"]</option>
+										<option value="1">@localizer["male"]</option>
+										<option value="2">@localizer["female"]</option>
 									</select>
 									<!--end::Select Status-->
 								</div>
@@ -172,15 +174,18 @@
 								<!--begin::Input group-->
 								<div class="col mb-5 mb-sm-0 mb-md-0 mb-lg-0 fv-row">
 									<label class="required form-label ms-2">@localizer["assign_role"]</label>
-									<!--begin::Select Status-->
-									<select class="form-select" name="Role" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]">
+									<!--begin::Select Role-->
+									<select class="form-select" asp-for="@Model.RoleName" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]">
 										<option></option>
-										<option value="1">Administrator</option>
-										<option value="2">Receptionist</option>
-										<option value="3">Trainer</option>
-										<option value="4">Accountant</option>
+										@foreach (var role in Model.Roles)
+										{
+											@if (!role.RoleName.Contains("Member") && !role.RoleName.Contains("Owner"))
+											{
+												<option value="@role.RoleName">@role.RoleName</option>
+											}
+										}
 									</select>
-									<!--end::Select Status-->
+									<!--end::Select Role-->
 								</div>
 								<!--end::Input group-->
 								<!--begin::Input group-->
@@ -207,38 +212,32 @@
 						<div class="card-body pt-0">
 							<div class="row row-cols-1 row-cols-sm-2 rol-cols-md-1 row-cols-lg-2">
 								<!--begin::Input group-->
-								<div class="col mb-5 fv-row">
-									<label class="required form-label ms-2">@localizer["email"]</label>
-									<input type="email" name="Email" class="form-control" placeholder="@localizer["enter"] @localizer["email"] @localizer["here"]" style="direction:@(IsRTL ? "rtl" : "ltr" )" />
+								<div class="col mb-5">
+									<label class="form-label ms-2">@localizer["city"]</label>
+									<input type="text" class="form-control" asp-for="@Model.CreateStaffDTO.City" placeholder="@localizer["enter"] @localizer["city"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 								<!--begin::Input group-->
-								<div class="col mb-5 fv-row">
-									<label class="required form-label ms-2">@localizer["mobile_number"]</label>
-									<input type="text" name="Mobile" class="form-control" placeholder="@localizer["enter"] @localizer["mobile_number"] @localizer["here"]" />
+								<div class="col mb-5">
+									<label class="form-label ms-2">@localizer["state"]</label>
+									<input type="text" class="form-control" asp-for="@Model.CreateStaffDTO.State" placeholder="@localizer["enter"] @localizer["state"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 							</div>
 							<div class="row row-cols-1 row-cols-sm-2 rol-cols-md-1 row-cols-lg-2">
 								<!--begin::Input group-->
-								<div class="col mb-5 fv-row">
-									<label class="required form-label ms-2">@localizer["state"]</label>
-									<input type="text" name="State" class="form-control" placeholder="@localizer["enter"] @localizer["state"] @localizer["here"]" />
+								<div class="mb-5 mb-sm-0 mb-md-0 mb-lg-0">
+									<label class="form-label ms-2">@localizer["address"]</label>
+									<input type="text" asp-for="@Model.CreateStaffDTO.Address" class="form-control" placeholder="@localizer["enter"] @localizer["address"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 								<!--begin::Input group-->
-								<div class="col mb-5 fv-row">
-									<label class="required form-label ms-2">@localizer["city"]</label>
-									<input type="text" class="form-control" name="City" placeholder="@localizer["enter"] @localizer["city"] @localizer["here"]" />
+								<div class="col">
+									<label class="form-label ms-2">@localizer["mobile_number"]</label>
+									<input type="text" asp-for="@Model.CreateStaffDTO.PhoneNumber" class="form-control" placeholder="@localizer["enter"] @localizer["mobile_number"] @localizer["here"]" />
 								</div>
 								<!--end::Input group-->
 							</div>
-							<!--begin::Input group-->
-							<div class="fv-row">
-								<label class="required form-label ms-2">@localizer["address"]</label>
-								<input type="text" name="Address" class="form-control" placeholder="@localizer["enter"] @localizer["address"] @localizer["here"]" />
-							</div>
-							<!--end::Input group-->
 						</div>
 						<!--end::Card body-->
 					</div>
@@ -254,20 +253,38 @@
 						<!--end::Card header-->
 						<!--begin::Card body-->
 						<div class="card-body pt-0">
-							<div class="row row-cols-1 row-cols-sm-2 rol-cols-md-1 row-cols-lg-2">
-								<!--begin::Input group-->
-								<div class="col mb-5 mb-sm-0 mb-md-0 mb-lg-0 fv-row">
-									<label class="required form-label ms-2">@localizer["username"]</label>
-									<input type="text" name="Username" class="form-control" placeholder="@localizer["enter"] @localizer["username"] @localizer["here"]" />
-								</div>
-								<!--end::Input group-->
-								<!--begin::Input group-->
-								<div class="col fv-row">
-									<label class="required form-label ms-2">@localizer["password"]</label>
-									<input type="password" name="Password" class="form-control" placeholder="@localizer["enter"] @localizer["password"] @localizer["here"]" />
-								</div>
-								<!--end::Input group-->
+							<!--begin::Input group-->
+							<div class="col mb-5 fv-row">
+								<label class="required form-label ms-2">@localizer["email"]</label>
+								<input type="email" asp-for="@Model.CreateStaffDTO.Email" class="form-control" placeholder="@localizer["enter"] @localizer["email"] @localizer["here"]" style="direction:@(IsRTL ? "rtl" : "ltr" )" />
 							</div>
+							<!--end::Input group-->
+							<!--begin::Input group-->
+							<div class="col fv-row" data-kt-password-meter="true">
+								<!--begin::Wrapper-->
+								<div class="mb-1">
+									<label class="required form-label ms-2">@localizer["password"]</label>
+									<div class="position-relative mb-3">
+										<input class="form-control" type="password" asp-for="@Model.CreateStaffDTO.Password" placeholder="@localizer["enter"] @localizer["password"] @localizer["here"]" autocomplete="off" />
+										<!--begin::Visibility toggle-->
+										<span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" data-kt-password-meter-control="visibility">
+											<i class="ki-solid ki-eye-slash fs-1"></i>
+											<i class="ki-solid ki-eye d-none fs-1"></i>
+										</span>
+										<!--end::Visibility toggle-->
+									</div>
+									<!--begin::Meter-->
+									<div class="d-flex align-items-center mb-3" data-kt-password-meter-control="highlight">
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px"></div>
+									</div>
+									<!--end::Meter-->
+								</div>
+								<!--end::Wrapper-->
+							</div>
+							<!--end::Input group-->
 						</div>
 						<!--end::Card header-->
 					</div>
@@ -284,9 +301,17 @@
 						<!--begin::Card body-->
 						<div class="card-body pt-0">
 							<!--begin::Input group-->
-							<div class="fv-row">
+							<div class="fv-row mb-5">
 								<label class="required form-label ms-2">@localizer["select_groups"]</label>
-								<input class="form-control d-flex align-items-center" placeholder="@localizer["search_by_group_name"]" id="select_groups" name="SelectedGroups" />
+								<!--begin::Select Status-->
+								<select class="form-select" asp-for="@Model.SelectedGroupIds" data-control="select2" data-close-on-select="false" data-placeholder="@localizer["select_an_option"]" data-allow-clear="false" multiple="multiple">
+									<option></option>
+									@foreach (var group in Model.GymGroupsListDTO)
+									{
+										<option value="@group.Id" data-kt-select2-user="@group.Image">@group.Name</option>
+									}
+								</select>
+								<!--end::Select Status-->
 							</div>
 							<!--end::Input group-->
 						</div>
@@ -317,6 +342,7 @@
 	<!--end::Content-->
 </div>
 <!--end::Content wrapper-->
+
 @section Scripts {
-	<script type="module" src="~/assets/js/customJs/AddNewStaff.js"></script>
+	<script src="~/assets/js/customJs/User/AddNewStaff.js" asp-append-version="true"></script>
 }
