--- a/gms.web/Views/GymUser/CreateNewMember.cshtml
+++ b/gms.web/Views/GymUser/CreateNewMember.cshtml
@@ -60,7 +60,7 @@
                             <!--begin::Image input-->
                             <div class="image-input image-input-empty image-input-outline symbol-label-blank mb-3" id="kt_image_input_control" data-kt-image-input="true">
                                 <!--begin::Preview existing avatar-->
-                                <div class="image-input-wrapper w-150px h-150px"></div>
+                                <div class="image-input-wrapper w-150px h-150px" style="background-position: center;"></div>
                                 <!--end::Preview existing avatar-->
                                 <!--begin::Label-->
                                 <label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="Change avatar">
@@ -103,7 +103,7 @@
                             <!--end::Card title-->
                             <!--begin::Card toolbar-->
                             <div class="card-toolbar">
-                                <div class="rounded-circle bg-success w-15px h-15px" id="member_tatus"></div>
+                                <div class="rounded-circle bg-success w-15px h-15px" id="member_status"></div>
                             </div>
                             <!--begin::Card toolbar-->
                         </div>
