--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -138,7 +138,7 @@
 								<!--begin:Menu item-->
 								<div class="menu-item" side-menu-item="true">
 									<!--begin:Menu link-->
-									<a class="menu-link" href="@Url.Action("AddNewStaff", "GymUser")">
+									<a class="menu-link" asp-controller="GymUser" asp-action="CreateNewStaff">
 										<span class="menu-bullet">
 											<span class="bullet bullet-dot"></span>
 										</span>
@@ -150,7 +150,7 @@
 								<!--begin:Menu item-->
 								<div class="menu-item" side-menu-item="true">
 									<!--begin:Menu link-->
-									<a class="menu-link" href="@Url.Action("StaffsList", "GymUser")">
+									<a class="menu-link" asp-controller="GymUser" asp-action="StaffsList">
 										<span class="menu-bullet">
 											<span class="bullet bullet-dot"></span>
 										</span>
