Complet General Setting And User Profile

--- a/gms.web/Views/Roles/Index.cshtml
+++ b/gms.web/Views/Roles/Index.cshtml
@@ -101,9 +101,9 @@
 							</div>
 							<!--end::Card body-->
 							<!--begin::Card footer-->
-							<div class="card-footer flex-wrap pt-0">
-								<button type="button" class="btn btn-light btn-active-primary my-1 me-2 view-role-btn">@localizer["view_role"]</button>
-								<button type="button" class="btn btn-light btn-active-light-primary my-1 edit-role-btn">@localizer["edit_role"]</button>
+							<div class="card-footer d-flex justify-content-end pt-0">
+								<button type="button" class="btn btn-bg-light btn-light-danger my-1 me-2 delete-role-btn" data-id="@item.RoleId">@localizer["delete"]</button>
+								<button type="button" class="btn btn-bg-light btn-light-primary my-1 edit-role-btn" data-id="@item.RoleId">@localizer["edit"]</button>
 							</div>
 							<!--end::Card footer-->
 						</div>
