Complet Add Gym New Branch

--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -503,6 +503,23 @@
 				<!--begin::Menu Item-->
 				<div class="menu-item" side-menu-item="true">
 					<!--begin::Menu link-->
+					<a class="menu-link" asp-controller="Gym" asp-action="BranchesList">
+						<!--begin::icone-->
+						<span class="menu-icon">
+							@* <i class="ki-solid ki-gear fs-1"></i> *@
+							<i class="ki-solid ki-geolocation-home fs-2x"></i>
+						</span>
+						<!--begin::icon-->
+						<!--begin::Title-->
+						<span class="menu-title">@localizer["branches"]</span>
+						<!--end::Title-->
+					</a>
+					<!--end::Menu link-->
+				</div>
+				<!--end::Menu Item-->
+				<!--begin::Menu Item-->
+				<div class="menu-item" side-menu-item="true">
+					<!--begin::Menu link-->
 					<a class="menu-link" asp-controller="Gym" asp-action="Settings">
 						<!--begin::icone-->
 						<span class="menu-icon">
